Added basic avatar upload on signup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
     <head>
+        <link rel="stylesheet" href="./styles/basic.css" />
         <link rel="stylesheet" href="./styles/chat.css" />
         <title>SwagChat</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
