--- a/frontend/notAuthorized.html
+++ b/frontend/notAuthorized.html
@@ -5,26 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not Authorized</title>
+
+    <link rel="stylesheet" href="styles/basic.css">
 </head>
 <body>
-    <h1>Not Authorized</h1>
-    <p>You need to login to continue to SwagChat.</p>
-
-    <br>
-
-    <input type="text" id="name" placeholder="Name (not neccessary for login)" value="username">
-    <br>
-    <input type="text" id="password" placeholder="Password" value="password">
-    <br>
-    <input type="text" id="email" placeholder="Email" value="email">
-
-    <br>
-    <button onclick="Auth.login()">Login</button>
-    <button onclick="Auth.register()">Register</button>
-
-    <script type="module" src="scripts/auth.js"></script>
-    <script>
-
-    </script>
+    <iframe src="./signup.html" frameborder="0" style="width: 100vw; height: 100vh;"></iframe>
 </body>
 </html>
