--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -8,57 +8,37 @@
         <title>Not Authorized</title>
 
         <link rel="stylesheet" href="styles/basic.css">
-        <link rel="stylesheet" href="styles/avatarUpload.css">
         <link rel="stylesheet" href="styles/signup.css">
     </head>
 
     <body>
-        <h1>Register</h1>
+        <h1>Login</h1>
 
         <form>
-            <h2>Username</h2>
-            <input type="text" id="name" autocomplete="off" required placeholder="Username123">
-
             <h2>Password</h2>
             <input type="password" id="password" autocomplete="on" required placeholder="Password">
 
             <h2>Email</h2>
             <input type="email" id="email" autocomplete="on" required placeholder="Email">
 
-            <div id="avatar"><h2>Choose your avatar:</h2></div>
-
-            <input type="submit" value="Register" id="register">
+            <input type="submit" value="Login" id="login">
         </form>
 
         <script>
-            function getAvatar() {
-                const avatar = document.getElementById("avatar");
-                const img = document.querySelector(".avatarFinal");
-
-                if (img) {
-                    return img.src;
-                }
-                else {
-                    return null;
-                }
-            }
-
             function getAllForms() {
-                const name = document.getElementById("name").value;
                 const password = document.getElementById("password").value;
                 const email = document.getElementById("email").value;
-                const avatar = getAvatar();
 
-                return { name, password, email, avatar };
+                return { email, password };
             }
 
-            document.getElementById("register").addEventListener("click", () => {
+            document.getElementById("login").addEventListener("click", () => {
                 event.preventDefault();
 
-                const formComplete = document.getElementById("name").value && document.getElementById("password").value && document.getElementById("email").value && getAvatar();
+                const formComplete = document.getElementById("email").value && document.getElementById("password").value;
 
                 if (formComplete) {
-                    Auth.register();
+                    Auth.login();
                 }
                 else {
                     console.warn("Please fill in all fields.");
@@ -66,7 +46,6 @@
             });
         </script>
         <script type="module" src="scripts/auth.js"></script>
-        <script src="scripts/avatar.js"></script>
     </body>
 
 </html>
