--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,13 +22,11 @@
                     <div id="rooms"></div>
                 </div>
 
-                <div class="bottom flex column">
-                    <!-- <div class="about">
-                    <a title="Privacy policy" href="/privacy.html" target="_blank">Privacy policy</a>
-                    <br>
-                    <a title="About" href="/about.html" target="_blank">About SwagChat</a>
-                </div> -->
+                <div class="bottom flex column" style="position: relative;">
                     <div class="currentUser" id="currentUser"></div>
+                    <div class="userMenu collapsed" id="userMenu">
+                        <button id="signOutButton">Sign Out</button>
+                    </div>
                 </div>
             </div>
             <div class="flex column" style="width:100%">
