made login possible with both username and password

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -17,9 +17,7 @@
             <h1>Register</h1>
 
             <form>
-                <div id="error" class="hidden">
-                    <span>This email is already registered!</span>
-                </div>
+                <div id="error" class="hidden"></div>
 
                 <h2 id="emailError">Email</h2>
                 <input type="email" id="email" autocomplete="on" required placeholder="Email">
