--- a/frontend/signin.html
+++ b/frontend/signin.html
@@ -16,12 +16,10 @@
             <h1>Register</h1>
 
             <form>
-                <div id="error" class="hidden">
-                    <span>This email is already registered!</span>
-                </div>
+                <div id="error" class="hidden"></div>
                 
-                <h2 id="emailError">Email</h2>
-                <input type="email" id="email" autocomplete="on" required placeholder="Email">
+                <h2 id="emailError">Email or Username</h2>
+                <input type="email" id="email" autocomplete="on" required placeholder="Email or Username">
 
                 <h2 id="passwordError">Password</h2>
                 <div class="passwordContainer">
