Added overlay when the socket isn't connected

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,11 @@
     </head>
 
     <body>
+        <div id="overlay">
+            <span>SwagChat</span>
+            <div class="loader"></div>
+        </div>
+
         <div class="flex" style="width: 100vw; overflow: hidden;">
             <div class="menu flex column space-between" id="menu" style="align-items: center;">
                 <div class="top">
