--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="./styles/basic.css" />
         <link rel="stylesheet" href="./styles/chat.css" />
         <title>SwagChat</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta charset="utf-8" />
         <meta name="author" content="programORdie" />
         <meta name="description" content="Chat with your friends with SwagChat!" />
