Lot's of bug fixes, improved rooms

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,8 @@
                         <div id="rooms"></div>
                     </div>
 
+                    <button id="createRoomButton">+</button>
+
                     <div class="bottom flex column" style="position: relative;">
                         <div class="currentUser" id="currentUser"></div>
                         <div class="userMenu collapsed" id="userMenu">
