Join last rooms by url

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
     <head>
-        <link rel="stylesheet" href="./styles/basic.css" />
-        <link rel="stylesheet" href="./styles/chat.css" />
+        <link rel="stylesheet" href="/styles/basic.css" />
+        <link rel="stylesheet" href="/styles/chat.css" />
         <title>SwagChat</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta charset="utf-8" />
@@ -11,8 +11,8 @@
         <meta name="description" content="Chat with your friends with SwagChat!" />
         <meta name="keywords" content="swag, chat, swagchat" />
         <meta name="robots" content="index, follow" />
-        <link rel="shortcut icon" href="./images/faveicon.png" type="image/png" />
-        <link rel="icon" href="./images/faveicon.png" type="image/png" />
+        <link rel="shortcut icon" href="/images/faveicon.png" type="image/png" />
+        <link rel="icon" href="/images/faveicon.png" type="image/png" />
     </head>
 
     <body>
