--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,8 @@
                         <div id="rooms"></div>
                     </div>
 
-                    <button id="createRoomButton">+</button>
+                    <button id="createRoomButton">+ New room</button>
+                    <button id="createInviteButton">+ New invite</button>
 
                     <div class="bottom flex column" style="position: relative;">
                         <div class="currentUser" id="currentUser"></div>
@@ -66,13 +67,13 @@
             </div>
         </div>
 
-        <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+        <script defer src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 
-        <script src="/scripts/messaging.js"></script>
-        <script src="/scripts/render.js"></script>
-        <script src="/scripts/upload.js"></script>
+        <script defer src="/scripts/messaging.js"></script>
+        <script defer src="/scripts/render.js"></script>
+        <script defer src="/scripts/upload.js"></script>
 
-        <script src="/scripts/index.js"></script>
+        <script defer src="/scripts/index.js"></script>
     </body>
 
 </html>
